updates for new debug syntax, fmi3 events and other fixes