@@ -15,6 +15,7 @@ import org.intocps.maestro.framework.fmi2.api.FmiBuilder;
 import org.intocps.maestro.framework.fmi2.api.mabl.*;
 import org.intocps.maestro.framework.fmi2.api.mabl.scoping.IMablScope;
 import org.intocps.maestro.framework.fmi2.api.mabl.scoping.ScopeFmi2Api;
+import org.intocps.maestro.framework.fmi2.api.mabl.values.IntExpressionValue;
 import org.intocps.maestro.framework.fmi2.api.mabl.values.PortValueExpresssionMapImpl;
 import org.intocps.maestro.framework.fmi2.api.mabl.values.PortValueMapImpl;
 import org.slf4j.Logger;
@@ -23,8 +24,10 @@ import org.slf4j.LoggerFactory;
 import javax.xml.xpath.XPathExpressionException;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -34,7 +37,7 @@ import static org.intocps.maestro.ast.MableAstFactory.*;
 import static org.intocps.maestro.ast.MableBuilder.call;
 import static org.intocps.maestro.ast.MableBuilder.newVariable;
 
-@SuppressWarnings("rawtypes")
+@SuppressWarnings({"rawtypes", "deprecation"})
 public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVariable<PStm>> implements FmiBuilder.Fmi3InstanceVariable<PStm, Fmi3ModelDescription.Fmi3ScalarVariable> {
     final static Logger logger = LoggerFactory.getLogger(InstanceVariableFmi3Api.class);
     private final static int FMI_STATUS_LAST_SUCCESSFUL = 2;
@@ -49,6 +52,14 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
     //    private final Map<IMablScope, Map<PType, ArrayVariableFmi2Api<Object>>> tentativeBuffer = new HashMap<>();
 //    private final Map<IMablScope, Map<PortFmi3Api, Integer>> tentativeBufferIndexMap = new HashMap<>();
     private final String environmentName;
+
+    public static final Predicate<InstanceVariableFmi3Api> hasEventMode = instance -> {
+        try {
+            return instance.getModelDescription().getHasEventMode();
+        } catch (XPathExpressionException e) {
+            throw new RuntimeException(e);
+        }
+    };
 
     static ARefExp wrapAsRef(PExp exp) {
         return new ARefExp(new LexLocation(exp.getLocation()), exp.clone());
@@ -66,7 +77,12 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
 
     Predicate<FmiBuilder.Port> obtainAsShared = p -> p.isLinked() || (variablesToLog != null && variablesToLog.contains(p.getName()));
 
+    public InstanceClocksFmi3 getClocksUtil() {
+        return clocksUtil;
+    }
+
     private final InstanceClocksFmi3 clocksUtil;
+
     public InstanceVariableFmi3Api(PStm declaration, FmuVariableFmi3Api parent, String name, ModelDescriptionContext3 modelDescriptionContext,
                                    MablApiBuilder builder, IMablScope declaringScope, PStateDesignator designator, PExp referenceExp) {
         this(declaration, parent, name, modelDescriptionContext, builder, declaringScope, designator, referenceExp, name);
@@ -82,13 +98,13 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
         this.builder = builder;
 
         ports = modelDescriptionContext.nameToSv.values().stream().map(sv -> new PortFmi3Api(this, sv))
-                .sorted(Comparator.comparing(PortFmi3Api::getPortReferenceValue)).collect(Collectors.toUnmodifiableList());
+                .sorted(Comparator.comparing(PortFmi3Api::getPortReferenceValue)).toList();
 
         outputPorts = ports.stream().filter(p -> p.scalarVariable.getVariable().getCausality() == Fmi3Causality.Output)
-                .sorted(Comparator.comparing(PortFmi3Api::getPortReferenceValue)).collect(Collectors.toUnmodifiableList());
+                .sorted(Comparator.comparing(PortFmi3Api::getPortReferenceValue)).toList();
 
         inputPorts = ports.stream().filter(p -> p.scalarVariable.getVariable().getCausality() == Fmi3Causality.Input)
-                .sorted(Comparator.comparing(PortFmi3Api::getPortReferenceValue)).collect(Collectors.toUnmodifiableList());
+                .sorted(Comparator.comparing(PortFmi3Api::getPortReferenceValue)).toList();
 
         this.environmentName = environmentName;
 
@@ -96,7 +112,7 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
                 .stream().collect(Collectors.groupingBy(i -> i.getVariable().getTypeIdentifier())).entrySet().stream().collect(
                         Collectors.toMap(Map.Entry::getKey, l -> l.getValue().size()));
         this.buffers = new Buffers<>(builder, name, getDeclaringStm(), (ScopeFmi2Api) getDeclaredScope(), svTypeMaxCount);
-        this.clocksUtil = new InstanceClocksFmi3(builder,this);
+        this.clocksUtil = new InstanceClocksFmi3(builder, this);
     }
 
     public Fmi3ModelDescription getModelDescription() {
@@ -382,13 +398,14 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
         fmiCall(scope, "getNumberOfEventIndicators", wrapAsRef(nEventIndicators.getExp().clone()));
     }
 
-     void handleError(FmiBuilder.Scope<PStm> scope, CallContext callContext) {
+    void handleError(FmiBuilder.Scope<PStm> scope, CallContext callContext) {
         handleError(scope, callContext.name(), callContext, MablApiBuilder.Fmi3Status.FMI_ERROR, MablApiBuilder.Fmi3Status.FMI_FATAL);
     }
 
     private void handleError(FmiBuilder.Scope<PStm> scope, String method, CallContext callContext, MablApiBuilder.Fmi3Status... statusesToFail) {
         if (builder.getSettings().fmiErrorHandlingEnabled) {
-            FmiStatusErrorHandlingBuilder.generate(builder, this, (IMablScope) scope, callContext, statusesToFail);
+            FmiStatusErrorHandlingBuilder.generate(builder, builder.getSettings().fmiErrorHandlingDetailEnabled, this, (IMablScope) scope, callContext,
+                    statusesToFail);
         }
     }
 
@@ -481,20 +498,12 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
 //        return step(dynamicScope, currentCommunicationPoint, communicationStepSize, newABoolLiteralExp(false));
 //    }
 
+
     public static class StepResult {
-        final BooleanVariableFmi2Api eventHandlingNeeded;
-        final BooleanVariableFmi2Api terminateSimulation;
-        final BooleanVariableFmi2Api earlyReturn;
-
-        public StepResult(BooleanVariableFmi2Api eventHandlingNeeded, BooleanVariableFmi2Api terminateSimulation, BooleanVariableFmi2Api earlyReturn,
-                          DoubleVariableFmi2Api lastSuccessfulTime) {
-            this.eventHandlingNeeded = eventHandlingNeeded;
-            this.terminateSimulation = terminateSimulation;
-            this.earlyReturn = earlyReturn;
-            this.lastSuccessfulTime = lastSuccessfulTime;
-        }
-
-        final DoubleVariableFmi2Api lastSuccessfulTime;
+        BooleanVariableFmi2Api eventHandlingNeeded;
+        BooleanVariableFmi2Api terminateSimulation;
+        BooleanVariableFmi2Api earlyReturn;
+        DoubleVariableFmi2Api lastSuccessfulTime;
 
         public BooleanVariableFmi2Api getEventHandlingNeeded() {
             return eventHandlingNeeded;
@@ -511,31 +520,71 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
         public DoubleVariableFmi2Api getLastSuccessfulTime() {
             return lastSuccessfulTime;
         }
+
+        public StepResult(BooleanVariableFmi2Api eventHandlingNeeded, BooleanVariableFmi2Api terminateSimulation, BooleanVariableFmi2Api earlyReturn,
+                          DoubleVariableFmi2Api lastSuccessfulTime) {
+            this.eventHandlingNeeded = eventHandlingNeeded;
+            this.terminateSimulation = terminateSimulation;
+            this.earlyReturn = earlyReturn;
+            this.lastSuccessfulTime = lastSuccessfulTime;
+        }
     }
 
-    StepResult stepResult;
+    StepResult stepResult = new StepResult(null, null, null, null);
 
     public Map.Entry<FmiBuilder.BoolVariable<PStm>, StepResult> step(FmiBuilder.Scope<PStm> scope,
                                                                      FmiBuilder.DoubleVariable<PStm> currentCommunicationPoint,
                                                                      FmiBuilder.DoubleVariable<PStm> communicationStepSize,
-                                                                     PExp noSetFMUStatePriorToCurrentPoint) {
 
-        if (stepResult == null) {
-            stepResult = new StepResult(createReusableBooleanVariable(false, this.getDeclaredScope(), this.name + "EventHandlingNeeded"),
-                    createReusableBooleanVariable(false, this.getDeclaredScope(), this.name + "TerminateSimulation"),
-                    createReusableBooleanVariable(false, this.getDeclaredScope(), this.name + "EarlyReturn"),
-                    createReusableDoubleVariable(0d, this.getDeclaredScope(), this.name + "LastSuccessfulTime"));
+                                                                     PExp noSetFMUStatePriorToCurrentPoint, StepResult optionalStepResult) {
+        final String namePrefix = this.name;
+        final IMablScope declareScope = this.getDeclaredScope();
+        Function<String, BooleanVariableFmi2Api> booleanVariableSupplier = n -> createReusableBooleanVariable(false, declareScope, namePrefix + n);
+
+        var evenHandlingNeeded = optionalStepResult == null ? null : optionalStepResult.eventHandlingNeeded;
+        if (evenHandlingNeeded == null) {
+            if (stepResult.eventHandlingNeeded == null) {
+                evenHandlingNeeded = booleanVariableSupplier.apply("EventHandlingNeeded");
+                stepResult.eventHandlingNeeded = evenHandlingNeeded;
+            }
         }
+
+        var terminateSimulation = optionalStepResult == null ? null : optionalStepResult.terminateSimulation;
+        if (terminateSimulation == null) {
+            if (stepResult.terminateSimulation == null) {
+                terminateSimulation = booleanVariableSupplier.apply("TerminateSimulation");
+                stepResult.terminateSimulation = terminateSimulation;
+            }
+        }
+
+        var earlyReturn = optionalStepResult == null ? null : optionalStepResult.earlyReturn;
+        if (earlyReturn == null) {
+            if (stepResult.earlyReturn == null) {
+                earlyReturn = booleanVariableSupplier.apply("EarlyReturn");
+                stepResult.earlyReturn = earlyReturn;
+            }
+        }
+
+        var lastSuccessfulTime = optionalStepResult == null ? null : optionalStepResult.lastSuccessfulTime;
+        if (lastSuccessfulTime == null) {
+            if (stepResult.lastSuccessfulTime == null) {
+                lastSuccessfulTime = createReusableDoubleVariable(0d, this.getDeclaredScope(), this.name + "LastSuccessfulTime");
+                stepResult.lastSuccessfulTime = lastSuccessfulTime;
+            }
+        }
+
+
+        var result = new StepResult(evenHandlingNeeded, terminateSimulation, earlyReturn, lastSuccessfulTime);
 
 
         scope.add(newAAssignmentStm(((IMablScope) scope).getFmiStatusVariable().getDesignator().clone(),
                 newACallExp(this.getReferenceExp().clone(), newAIdentifier("doStep"),
                         Arrays.asList(((VariableFmi2Api) currentCommunicationPoint).getReferenceExp().clone(),
                                 ((VariableFmi2Api) communicationStepSize).getReferenceExp().clone(), noSetFMUStatePriorToCurrentPoint.clone(),
-                                wrapAsRef(stepResult.eventHandlingNeeded.getReferenceExp()).clone(),
-                                wrapAsRef(stepResult.terminateSimulation.getReferenceExp()).clone(),
-                                wrapAsRef(stepResult.earlyReturn.getReferenceExp()).clone(),
-                                wrapAsRef(stepResult.lastSuccessfulTime.getReferenceExp()).clone()))));
+                                wrapAsRef(result.eventHandlingNeeded.getReferenceExp()).clone(),
+                                wrapAsRef(result.terminateSimulation.getReferenceExp()).clone(),
+                                wrapAsRef(result.earlyReturn.getReferenceExp()).clone(),
+                                wrapAsRef(result.lastSuccessfulTime.getReferenceExp()).clone()))));
 
         /*
               int doStep(
@@ -555,7 +604,7 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
 
 
         if (builder.getSettings().fmiErrorHandlingEnabled) {
-            FmiStatusErrorHandlingBuilder.generate(builder, this, (IMablScope) scope, new CallContext("doStep", null), MablApiBuilder.Fmi3Status.FMI_ERROR,
+            FmiStatusErrorHandlingBuilder.generate(builder, builder.getSettings().fmiErrorHandlingDetailEnabled,this, (IMablScope) scope, new CallContext("doStep", null), MablApiBuilder.Fmi3Status.FMI_ERROR,
                     MablApiBuilder.Fmi3Status.FMI_FATAL);
         }
 
@@ -574,7 +623,7 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
 //                                ((VariableFmi2Api<?>) communicationStepSize).getReferenceExp().clone())),
 //                newAAssignmentStm(getCurrentTimeFullStepVar().getDesignator().clone(), newABoolLiteralExp(true)))));
 
-        return Map.entry(getCurrentTimeFullStepVar(), this.stepResult);
+        return Map.entry(getCurrentTimeFullStepVar(), result);
     }
 
     @Override
@@ -590,18 +639,18 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
 
     @Override
     public List<PortFmi3Api> getPorts(int... valueReferences) {
-        List<Integer> accept = Arrays.stream(valueReferences).boxed().collect(Collectors.toList());
+        List<Integer> accept = Arrays.stream(valueReferences).boxed().toList();
         return ports.stream().filter(p -> accept.contains(p.getPortReferenceValue().intValue())).collect(Collectors.toList());
     }
 
     @Override
     public PortFmi3Api getPort(String name) {
-        return this.getPorts(name).get(0);
+        return this.getPorts(name).getFirst();
     }
 
     @Override
     public PortFmi3Api getPort(int valueReference) {
-        return this.getPorts(valueReference).get(0);
+        return this.getPorts(valueReference).getFirst();
     }
 
     //TODO: Move tentative buffer and global share buffer logic to its own module so that it is not coupled with the component logic?
@@ -663,7 +712,7 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
         if (ports == null || ports.length == 0) {
             return Map.of();
         } else {
-            selectedPorts = Arrays.stream(ports).map(PortFmi3Api.class::cast).collect(Collectors.toList());
+            selectedPorts = Arrays.stream(ports).map(PortFmi3Api.class::cast).toList();
         }
 
         Map<PortFmi3Api, VariableFmi2Api<V>> results = new HashMap<>();
@@ -674,7 +723,7 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
         selectedPorts.stream().map(p -> p.scalarVariable.getVariable().getTypeIdentifier()).distinct()
                 .map(t -> selectedPorts.stream().filter(p -> p.scalarVariable.getVariable().getTypeIdentifier().equals(t))
                         .sorted(Comparator.comparing(FmiBuilder.Port::getPortReferenceValue)).collect(Collectors.toList()))
-                .forEach(l -> typeToSortedPorts.put(l.get(0).scalarVariable.getVariable().getTypeIdentifier(), l));
+                .forEach(l -> typeToSortedPorts.put(l.getFirst().scalarVariable.getVariable().getTypeIdentifier(), l));
 
         for (Map.Entry<Fmi3TypeEnum, List<PortFmi3Api>> e : typeToSortedPorts.entrySet()) {
             for (int i = 0; i < e.getValue().size(); i++) {
@@ -684,7 +733,7 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
             }
 
 //all ports should have the same type so lets use the first port to define the io array type
-            PortFmi3Api firstTargetPort = e.getValue().get(0);
+            PortFmi3Api firstTargetPort = e.getValue().getFirst();
             PType type = firstTargetPort.getType();
 
             ArrayVariableFmi2Api<Object> valBuf = this.buffers.getBuffer(Buffers.BufferTypes.IO, type,
@@ -807,7 +856,7 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
     @SuppressWarnings("unchecked")
     @Override
     public <V> Map<PortFmi3Api, VariableFmi2Api<V>> get(int... valueReferences) {
-        List<Integer> accept = Arrays.stream(valueReferences).boxed().collect(Collectors.toList());
+        List<Integer> accept = Arrays.stream(valueReferences).boxed().toList();
         return get(builder.getDynamicScope(),
                 outputPorts.stream().filter(p -> accept.contains(p.getPortReferenceValue().intValue())).toArray(FmiBuilder.Port[]::new));
     }
@@ -983,12 +1032,12 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
         }
 
         List<PortFmi3Api> sortedPorts =
-                selectedPorts.stream().sorted(Comparator.comparing(FmiBuilder.Port::getPortReferenceValue)).collect(Collectors.toList());
+                selectedPorts.stream().sorted(Comparator.comparing(FmiBuilder.Port::getPortReferenceValue)).toList();
 
         // Group by the string value of the port type as grouping by the port type itself doesnt utilise equals
         sortedPorts.stream().collect(Collectors.groupingBy(i -> i.getSourceObject().getVariable().getTypeIdentifier().toString())).forEach((key, value) -> {
             ArrayVariableFmi2Api<Object> vrefBuf = getValueReferenceBuffer();
-            PortFmi3Api firstTargetPort = value.get(0);
+            PortFmi3Api firstTargetPort = value.getFirst();
             PType type = firstTargetPort.getType();
             for (int i = 0; i < value.size(); i++) {
                 FmiBuilder.Port p = value.get(i);
@@ -1221,7 +1270,7 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
     @SuppressWarnings("unchecked")
     @Override
     public void setLinked(long... filterValueReferences) {
-        List<Long> accept = Arrays.stream(filterValueReferences).boxed().collect(Collectors.toList());
+        List<Long> accept = Arrays.stream(filterValueReferences).boxed().toList();
         this.setLinked(dynamicScope, getPorts().stream().filter(p -> accept.contains(p.getPortReferenceValue())).toArray(FmiBuilder.Port[]::new));
 
     }
@@ -1242,65 +1291,45 @@ public class InstanceVariableFmi3Api extends VariableFmi2Api<FmiBuilder.NamedVar
     }
 
     @Override
-    public  Map<? extends FmiBuilder.Port<Fmi3ModelDescription.Fmi3ScalarVariable, PStm>, ? extends FmiBuilder.DoubleVariable<PStm>> getClockInterval(
+    public Map<? extends FmiBuilder.Port<Fmi3ModelDescription.Fmi3ScalarVariable, PStm>, ? extends FmiBuilder.DoubleVariable<PStm>> getClockInterval(
             FmiBuilder.Scope<PStm> scope, FmiBuilder.Port<Fmi3ModelDescription.Fmi3ScalarVariable, PStm>... ports) {
-this.clocksUtil.updateClockIntervals(scope,getValueReferenceBuffer(),ports);
+        this.clocksUtil.updateClockIntervals(scope, getValueReferenceBuffer(), ports);
         return Map.of();
-//            List<PortFmi3Api> selectedPorts;
-//            if (ports == null || ports.length == 0) {
-//                return Map.of();
-//            } else {
-//                selectedPorts = Arrays.stream(ports).map(PortFmi3Api.class::cast).filter(isClock).filter(isCausalityInput).collect(Collectors.toList());
-//            }
-//
-//            Map<PortFmi3Api, VariableFmi2Api<V>> results = new HashMap<>();
-//
-//            ArrayVariableFmi2Api<Object> vrefBuf = getValueReferenceBuffer();
-//
-//
-//            for (Map.Entry<Fmi3TypeEnum, List<PortFmi3Api>> e : typeToSortedPorts.entrySet()) {
-//                for (int i = 0; i < e.getValue().size(); i++) {
-//                    PortFmi3Api p = e.getValue().get(i);
-//                    PStateDesignator designator = vrefBuf.items().get(i).getDesignator().clone();
-//                    scope.add(newAAssignmentStm(designator, newAIntLiteralExp(p.getPortReferenceValue().intValue())));
-//                }
-//
-////all ports should have the same type so lets use the first port to define the io array type
-//                PortFmi3Api firstTargetPort = e.getValue().get(0);
-//                PType type = firstTargetPort.getType();
-//
-//                ArrayVariableFmi2Api<Object> valBuf = this.buffers.getBuffer(Buffers.BufferTypes.ClocksTiming, type,
-//                        firstTargetPort.getSourceObject().getVariable().getTypeIdentifier());
-//
-//                List<PExp> args = new ArrayList<>(
-//                        List.of(vrefBuf.getReferenceExp().clone(), newAUIntLiteralExp((long) e.getValue().size()), newARefExp(valBuf.getReferenceExp().clone())));
-////                if (firstTargetPort.scalarVariable != null && firstTargetPort.scalarVariable.getVariable().getTypeIdentifier() == Fmi3TypeEnum.ClockType) {
-////                    // clocks do not have the latter size included
-////                } else {
-////                    args.add(
-////                            newAUIntLiteralExp((long) e.getValue().size()));
-////                }
-//                AAssigmentStm stm = newAAssignmentStm(((IMablScope) scope).getFmiStatusVariable().getDesignator().clone(),
-//                        call(this.getReferenceExp().clone(), createFunctionName(FmiFunctionType.GET, firstTargetPort), args));
-//                scope.add(stm);
-//
-//                handleError(scope, new CallContext(createFunctionName(FmiFunctionType.GET, firstTargetPort), args));
-//
-//                if (builder.getSettings().setGetDerivatives && type.equals(new ARealNumericPrimitiveType())) {
-//                    derivativePortsToShare = getDerivatives(e.getValue(), scope);
-//                }
-//
-//                for (int i = 0; i < e.getValue().size(); i++) {
-//                    results.put(e.getValue().get(i), (VariableFmi2Api<V>) valBuf.items().get(i));
-//                }
-//            }
-//            return results;
-        }
+    }
 
 
     @Override
-    public FmiBuilder.DoubleVariable<PStm> getClockShift(FmiBuilder.Port<Fmi3ModelDescription.Fmi3ScalarVariable, PStm> port) {
-        return null;
+    public Map<? extends FmiBuilder.Port<Fmi3ModelDescription.Fmi3ScalarVariable, PStm>, ? extends FmiBuilder.DoubleVariable<PStm>> getClockShift(
+            FmiBuilder.Scope<PStm> scope, FmiBuilder.Port<Fmi3ModelDescription.Fmi3ScalarVariable, PStm>... ports) {
+
+        this.clocksUtil.updateClockShifts(scope, getValueReferenceBuffer(), ports);
+        return Map.of();
+    }
+
+    @Override
+    public void setClockInterval(FmiBuilder.Scope<PStm> scope, FmiBuilder.Port<Fmi3ModelDescription.Fmi3ScalarVariable, PStm> port,
+                                 FmiBuilder.DoubleExpressionValue value) {
+        ArrayVariableFmi2Api<Object> vrefBuf = getValueReferenceBuffer();
+//        vrefBuf.items().getFirst().setValue(port.getPortReferenceValue());
+        PStateDesignator designator = vrefBuf.items().getFirst().getDesignator().clone();
+        scope.add(newAAssignmentStm(designator, newAIntLiteralExp(port.getPortReferenceValue().intValue())));
+        var values=        getClocksUtil().getIntervalBuffer();
+        values.setValue(IntExpressionValue.of(0),value);
+        fmiCall(scope, "setIntervalDecimal", vrefBuf.getReferenceExp().clone(), new AIntLiteralExp(null,1).clone(),
+                values.getExp().clone());
+    }
+
+    @Override
+    public void setClockShift(FmiBuilder.Scope<PStm> scope, FmiBuilder.Port<Fmi3ModelDescription.Fmi3ScalarVariable, PStm> port,
+                              FmiBuilder.DoubleExpressionValue value) {
+        ArrayVariableFmi2Api<Object> vrefBuf = getValueReferenceBuffer();
+//        vrefBuf.items().getFirst().setValue(port.getPortReferenceValue());
+        PStateDesignator designator = vrefBuf.items().getFirst().getDesignator().clone();
+        scope.add(newAAssignmentStm(designator, newAIntLiteralExp(port.getPortReferenceValue().intValue())));
+var values=        getClocksUtil().getShiftBuffer();
+values.setValue(IntExpressionValue.of(0),value);
+        fmiCall(scope, "setShiftDecimal", vrefBuf.getReferenceExp().clone(), new AIntLiteralExp(null,1).clone(),
+                values.getExp().clone());
     }
 
     @Override
@@ -1348,7 +1377,7 @@ this.clocksUtil.updateClockIntervals(scope,getValueReferenceBuffer(),ports);
         // Group by the string value of the port type as grouping by the port type itself doesnt utilise equals
         values.entrySet().stream().collect(Collectors.groupingBy(map -> ((PortFmi3Api) map.getKey()).getType().toString())).entrySet().stream()
                 .forEach(map -> {
-                    PType type = ((PortFmi3Api) map.getValue().get(0).getKey()).getType();
+                    PType type = ((PortFmi3Api) map.getValue().getFirst().getKey()).getType();
 
 
                     Map<FmiBuilder.Port<Fmi3ModelDescription.Fmi3ScalarVariable, PStm>, FmiBuilder.Variable> data =
@@ -1364,7 +1393,7 @@ this.clocksUtil.updateClockIntervals(scope,getValueReferenceBuffer(),ports);
                                 if (port.getSharedAsVariable() == null) {
                                     ArrayVariableFmi2Api<Object> newBuf = this.buffers.growBuffer(Buffers.BufferTypes.Share, buffer, 1, fmiType);
 
-                                    VariableFmi2Api<Object> newShared = newBuf.items().get(newBuf.items().size() - 1);
+                                    VariableFmi2Api<Object> newShared = newBuf.items().getLast();
                                     port.setSharedAsVariable(newShared);
                                 }
 
@@ -1388,7 +1417,7 @@ this.clocksUtil.updateClockIntervals(scope,getValueReferenceBuffer(),ports);
                                             ArrayVariableFmi2Api<Object> sharedDerBuf = growSharedDerBuf(1);
 
                                             ArrayVariableFmi2Api newSharedArray =
-                                                    (ArrayVariableFmi2Api) sharedDerBuf.items().get(sharedDerBuf.items().size() - 1);
+                                                    (ArrayVariableFmi2Api) sharedDerBuf.items().getLast();
                                             derivativePort.setSharedAsVariable(newSharedArray);
                                         }
 
@@ -1496,7 +1525,7 @@ this.clocksUtil.updateClockIntervals(scope,getValueReferenceBuffer(),ports);
                 call(this.getReferenceExp().clone(), "getState", Collections.singletonList(newARefExp(state.getReferenceExp().clone()))));
         scope.add(stm);
         if (builder.getSettings().fmiErrorHandlingEnabled) {
-            FmiStatusErrorHandlingBuilder.generate(builder, this, (IMablScope) scope, new CallContext("getState", null), MablApiBuilder.Fmi3Status.FMI_ERROR,
+            FmiStatusErrorHandlingBuilder.generate(builder, builder.getSettings().fmiErrorHandlingDetailEnabled,this, (IMablScope) scope, new CallContext("getState", null), MablApiBuilder.Fmi3Status.FMI_ERROR,
                     MablApiBuilder.Fmi3Status.FMI_FATAL);
         }
 
@@ -1508,7 +1537,7 @@ this.clocksUtil.updateClockIntervals(scope,getValueReferenceBuffer(),ports);
     }
 
     public List<PortFmi3Api> getAllConnectedOutputs() {
-        return this.ports.stream().filter(x -> x.scalarVariable.getVariable().getCausality() == Fmi3Causality.Output && x.getTargetPorts().size() > 0)
+        return this.ports.stream().filter(x -> x.scalarVariable.getVariable().getCausality() == Fmi3Causality.Output && !x.getTargetPorts().isEmpty())
                 .collect(Collectors.toList());
     }
 
@@ -1530,12 +1559,13 @@ this.clocksUtil.updateClockIntervals(scope,getValueReferenceBuffer(),ports);
     /**
      * Error and Fatal should lead to freeInstance calls followed by subsequent termination.
      */
-    static record CallContext(String name, List<PExp> args) {
+    record CallContext(String name, List<PExp> args) {
     }
 
     static class FmiStatusErrorHandlingBuilder {
 
-        static void generate(MablApiBuilder builder, InstanceVariableFmi3Api instance, IMablScope scope, CallContext callContext,
+        @SuppressWarnings("deprecation")
+        static void generate(MablApiBuilder builder, boolean includeDetails, InstanceVariableFmi3Api instance, IMablScope scope, CallContext callContext,
                              MablApiBuilder.Fmi3Status... statusesToFail) {
             if (statusesToFail == null || statusesToFail.length == 0) {
                 return;
@@ -1555,17 +1585,19 @@ this.clocksUtil.updateClockIntervals(scope,getValueReferenceBuffer(),ports);
             ScopeFmi2Api thenScope = scope.enterIf(new PredicateFmi2Api(exp)).enterThen();
 
             // thenScope.add(newAAssignmentStm(builder.getGlobalExecutionContinue().getDesignator().clone(), newABoolLiteralExp(false)));
-
-            for (MablApiBuilder.Fmi3Status status : statusesToFail) {
-                ScopeFmi2Api s = thenScope.enterIf(new PredicateFmi2Api(checkStatusEq.apply(status))).enterThen();
-                if (Stream.of("get", "set").anyMatch(
-                        p -> Fmi3TypeEnum.getEntries().stream().anyMatch(t -> method.startsWith(p + t.name().substring(0, t.name().indexOf("Type")))))) {
-                    //we have FMI get/set with vr and nvr
-                    builder.getLogger()
-                            .logFmiCallVRefs(s, callContext.args().get(0).clone(),callContext.args().get(1).clone(),method.substring(0, 1).toUpperCase() + method.substring(1) + " failed on '%s' with status: " + status, instance);
-                } else {
-                    builder.getLogger()
-                            .error(s, method.substring(0, 1).toUpperCase() + method.substring(1) + " failed on '%s' with status: " + status, instance);
+            if (includeDetails) {
+                for (MablApiBuilder.Fmi3Status status : statusesToFail) {
+                    ScopeFmi2Api s = thenScope.enterIf(new PredicateFmi2Api(checkStatusEq.apply(status))).enterThen();
+                    if (Stream.of("get", "set").anyMatch(
+                            p -> Fmi3TypeEnum.getEntries().stream().anyMatch(t -> method.startsWith(p + t.name().substring(0, t.name().indexOf("Type")))))) {
+                        //we have FMI get/set with vr and nvr
+                        builder.getLogger()
+                                .logFmiCallVRefs(s, callContext.args().get(0).clone(), callContext.args().get(1).clone(),
+                                        method.substring(0, 1).toUpperCase() + method.substring(1) + " failed on '%s' with status: " + status, instance);
+                    } else {
+                        builder.getLogger()
+                                .error(s, method.substring(0, 1).toUpperCase() + method.substring(1) + " failed on '%s' with status: " + status, instance);
+                    }
                 }
             }
 
