@@ -16,22 +16,26 @@ import org.intocps.maestro.framework.fmi2.api.mabl.*;
 import org.intocps.maestro.framework.fmi2.api.mabl.scoping.DynamicActiveBuilderScope;
 import org.intocps.maestro.framework.fmi2.api.mabl.scoping.IfMaBlScope;
 import org.intocps.maestro.framework.fmi2.api.mabl.scoping.ScopeFmi2Api;
+import org.intocps.maestro.framework.fmi2.api.mabl.values.BooleanExpressionValue;
 import org.intocps.maestro.framework.fmi2.api.mabl.values.DoubleExpressionValue;
+import org.intocps.maestro.framework.fmi2.api.mabl.values.IntExpressionValue;
 import org.intocps.maestro.framework.fmi2.api.mabl.variables.*;
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.xml.xpath.XPathExpressionException;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.intocps.maestro.ast.MableAstFactory.*;
 import static org.intocps.maestro.framework.fmi2.api.mabl.PortFmi3Api.PortFilters.*;
+import static org.intocps.maestro.framework.fmi2.api.mabl.variables.InstanceVariableFmi3Api.hasEventMode;
 import static org.intocps.maestro.plugin.JacobianStepBuilder.ARG_INDEX.*;
 
+@SuppressWarnings("deprecation")
 @SimulationFramework(framework = Framework.FMI2)
 public class JacobianStepBuilder3 extends JacobianStepBuilder {
 
@@ -55,6 +59,10 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
         return Collections.singletonList(fixedStep3Func);
     }
 
+    private String blockMessage(String msg) {
+        String seperator = "#############################################";
+        return seperator + "## " + msg + " " + seperator;
+    }
 
     @Override
     public <R> RuntimeConfigAddition<R> expandWithRuntimeAddition(AFunctionDeclaration declaredFunction,
@@ -121,24 +129,30 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
             }
 
             // Convert raw MaBL to API
-            JacobianInternalBuilder.BaseJacobianContext ctxt = JacobianInternalBuilder.buildBaseCtxt(selectedFun, formalArguments, dynamicScope);
+            var ctxt = JacobianInternalBuilder.buildBaseFmi3Ctxt(builder, selectedFun, formalArguments, dynamicScope);
 
-            Map<String, ComponentVariableFmi2Api> fmuInstances = ctxt.fmuInstances;
-            Map<String, InstanceVariableFmi3Api> fmuInstances3 = ((List<InstanceVariableFmi3Api>) ((FmiBuilder.ArrayVariable) selectedFun.getArgumentValue(
-                    formalArguments, FMI3_INSTANCES)).items()).stream()
-                    .collect(Collectors.toMap(InstanceVariableFmi3Api::getName, Function.identity(), (u, v) -> u, LinkedHashMap::new));
+            var fmuInstances = ctxt.fmuInstances;
+            var fmuInstances3 = ctxt.fmu3Instances;
+
+            var timeBasedInputClockPorts = fmuInstances3.entrySet().stream().collect(Collectors.toMap(Map.Entry::getValue,
+                    m -> m.getValue().getPorts().stream().filter(isClock).filter(isCausalityInput.and(isClockTimeBased))));
 
 
             // Create the logging
             DataWriter dataWriter = builder.getDataWriter();
             DataWriter.DataWriterInstance dataWriterInstance = dataWriter.createDataWriterInstance();
-            dataWriterInstance.initialize(Stream.concat(fmuInstances.values().stream().flatMap(x -> x.getVariablesToLog().stream()
+            List<DataWriter.DataWriterInstance.LogEntry> logVariables = Stream.concat(fmuInstances.values().stream().flatMap(x -> x.getVariablesToLog().stream()
                     .map(xsv -> new DataWriter.DataWriterInstance.LogEntry(xsv.getMultiModelScalarVariableName(),
                             () -> xsv.getSharedAsVariable().getReferenceExp().clone()))), fmuInstances3.values().stream().flatMap(
                     x -> x.getVariablesToLog().stream().map(xsv -> new DataWriter.DataWriterInstance.LogEntry(xsv.getMultiModelScalarVariableName(),
                             () -> xsv.getSharedAsVariable().getReferenceExp().clone())))
 
-            ).collect(Collectors.toList()));
+            ).collect(Collectors.toList());
+            var timeBasedClocksLogVariables = timeBasedInputClockPorts.entrySet().stream().flatMap(m -> m.getValue()
+                    .map(clockPort -> new DataWriter.DataWriterInstance.LogEntry(clockPort.getMultiModelScalarVariableName(),
+                            () -> m.getKey().getClocksUtil().getClockTriggeredState(clockPort).getReferenceExp().clone()))).toList();
+            logVariables.addAll(timeBasedClocksLogVariables);
+            dataWriterInstance.initialize(logVariables);
 
             // Create simulation control to allow for user interactive loop stopping
             SimulationControl simulationControl = builder.getSimulationControl();
@@ -155,6 +169,7 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
             Map<InstanceVariableFmi3Api, Map<PortFmi3Api, VariableFmi2Api<Object>>> instancesToPortsWithValues = JacobianVariableStepBuilder.getAllInstancePortsWithOutputOrLog(
                     fmuInstances3, jacobianStepConfig, env);
 
+            builder.getLogger().debug(blockMessage("Jaccobian start"));
 
             // Share
             componentsToPortsWithValues.forEach(ComponentVariableFmi2Api::share);
@@ -166,7 +181,6 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
             ArrayVariableFmi2Api<Double> fmuCommunicationPoints = dynamicScope.store("fmu_communicationpoints",
                     new Double[fmuInstances.size() + fmuInstances3.size()]);
 
-//            int indexer = 0;
             for (ComponentVariableFmi2Api instance : fmuInstances.values()) {
 
                 FrameworkUnitInfo v = env.getInstanceByLexName(instance.getEnvironmentName());
@@ -182,7 +196,7 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
             }
 
             AtomicInteger indexer = new AtomicInteger();
-           var fmuInstanceToCommunicationPoint = fmuInstances.values().stream()
+            var fmuInstanceToCommunicationPoint = fmuInstances.values().stream()
                     .collect(Collectors.toMap(inst -> inst, instance -> fmuCommunicationPoints.items().get(indexer.getAndIncrement())));
 
             var fmuInstance3ToCommunicationPoint = fmuInstances3.values().stream()
@@ -190,19 +204,7 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
 
 
             // validate if all fmus can get state
-            boolean everyFMUSupportsGetState = fmuInstances.values().stream().allMatch(inst -> {
-                try {
-                    return inst.getModelDescription().getCanGetAndSetFmustate();
-                } catch (XPathExpressionException e) {
-                    throw new RuntimeException(e);
-                }
-            }) && fmuInstances3.values().stream().allMatch(inst -> {
-                try {
-                    return inst.getModelDescription().getCanGetAndSetFmustate();
-                } catch (XPathExpressionException e) {
-                    throw new RuntimeException(e);
-                }
-            });
+            boolean everyFMUSupportsGetState = isEveryFMUSupportsGetState(fmuInstances, fmuInstances3);
 
 
             if (!everyFMUSupportsGetState && jacobianStepConfig.stabilisation) {
@@ -221,22 +223,12 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
             // Event Step 0: create time based clocks. We need to obtain the specific timing variables from
 //            fmuInstances3.values().stream().findFirst().get().
 
+
             // Event Init step 1: get clocks from others
-            for(var instance : fmuInstances3.values()) {
-                instance.enterEventMode();
-                var clockPorts =instance.getPorts().stream().filter(isClock).toList();
-                clockPorts.stream().filter(isCausalityOutput).forEach(p-> instance.getAndShare(p));
-            }
-
-            // Event update the initial event states not sure if we should set clocks before this
-
-
-
-
-            //we need to make sure every instance is ready for step mode
-            for(var instance : fmuInstances3.values()) {
-                instance.enterStepMode();
-            }
+            builder.getLogger().debug(blockMessage("Jaccobian Event handling before loop"));
+            builder.getLogger().debug("EVENT - Before step event handling");
+            var eventCapableInstances = fmuInstances3.values().stream().filter(hasEventMode).toList();
+            var eventUpdatingFlags = updateEventsInEventMode(builder, eventCapableInstances, fmuInstances3, ctxt);
 
             //TODO: OK now clocked variables must be filtered as they are only available in event mode
 
@@ -261,6 +253,7 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
             // Initialise swap and step condition variables
             ModelSwapBuilder.ModelSwapContext modelSwapContext = ModelSwapBuilder.buildContext(env, dynamicScope);
 
+            builder.getLogger().debug(blockMessage("Jaccobian main loop"));
             ScopeFmi2Api scopeFmi2Api = dynamicScope.enterWhile(loopPredicate);
             {
                 ScopeFmi2Api stoppingThenScope = scopeFmi2Api.enterIf(simulationControl.stopRequested().toPredicate()).enterThen();
@@ -292,7 +285,9 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
                 // SET ALL LINKED VARIABLES
                 // This has to be carried out regardless of stabilisation or not.
                 ModelSwapBuilder.setWithModelSwapLinking(fmuInstances, env, dynamicScope, modelSwapContext);
-                fmuInstances3.values().forEach( instance -> instance.setLinked(instance.getPorts().stream().filter(InstanceVariableFmi3Api.isLinked.and(isClockedVariable.negate()).and(isClock.negate())).toArray(PortFmi3Api[]::new)));
+                fmuInstances3.values().forEach(instance -> instance.setLinked(
+                        instance.getPorts().stream().filter(InstanceVariableFmi3Api.isLinked.and(isClockedVariable.negate()).and(isClock.negate()))
+                                .toArray(PortFmi3Api[]::new)));
 
                 if (algorithm == StepAlgorithm.VARIABLESTEP) {
                     // Get variable step
@@ -303,93 +298,16 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
                 anyDiscards.setValue(new BooleanVariableFmi2Api(null, null, dynamicScope, null, MableAstFactory.newABoolLiteralExp(false)));
 
                 // STEP ALL FMI2
-                fmuInstanceToCommunicationPoint.forEach((instance, communicationPoint) -> {
-
-                    DoubleVariableFmi2Api communicationTime = ctxt.currentCommunicationTime;
-
-                    Map.Entry<DoubleVariableFmi2Api, Optional<PredicateFmi2Api>> swapStep = ModelSwapBuilder.updateStep(modelSwapContext, env, instance,
-                            communicationTime);
-
-                    Optional<PredicateFmi2Api> stepPredicate = swapStep.getValue();
-                    communicationTime = swapStep.getKey();
-
-                    stepPredicate.ifPresent(dynamicScope::enterIf);
-
-                    Map.Entry<FmiBuilder.BoolVariable<PStm>, FmiBuilder.DoubleVariable<PStm>> discard = instance.step(communicationTime, ctxt.currentStepSize);
-
-                    communicationPoint.setValue(new DoubleExpressionValue(discard.getValue().getExp()));
-
-                    PredicateFmi2Api didDiscard = new PredicateFmi2Api(discard.getKey().getExp()).not();
-
-                    dynamicScope.enterIf(didDiscard);
-                    {
-                        builder.getLogger()
-                                .debug("## FMU: '%s' DISCARDED step at sim-time: %f for step-size: %f and proposed sim-time: %.15f", instance.getName(),
-                                        communicationTime, ctxt.currentStepSize,
-                                        new VariableFmi2Api<>(null, discard.getValue().getType(), dynamicScope, dynamicScope, null,
-                                                discard.getValue().getExp()));
-                        anyDiscards.setValue(new BooleanVariableFmi2Api(null, null, dynamicScope, null, anyDiscards.toPredicate().or(didDiscard).getExp()));
-                        dynamicScope.leave();
-                    }
-
-                    if (stepPredicate.isPresent()) {
-                        dynamicScope.leave();
-                    }
-                });
+                stepAllFmi2(builder, fmuInstanceToCommunicationPoint, ctxt, modelSwapContext, env, dynamicScope, anyDiscards);
 
                 // STEP ALL FMI3
-                fmuInstance3ToCommunicationPoint.forEach((instance, communicationPoint) -> {
-
-                    DoubleVariableFmi2Api communicationTime = ctxt.currentCommunicationTime;
-
-//                    Map.Entry<DoubleVariableFmi2Api, Optional<PredicateFmi2Api>> swapStep = ModelSwapBuilder.updateStep(modelSwapContext, env, instance,
-//                            communicationTime);
-
-//                    Optional<PredicateFmi2Api> stepPredicate = swapStep.getValue();
-//                    communicationTime = swapStep.getKey();
-
-//                    stepPredicate.ifPresent(dynamicScope::enterIf);
-
-                    var discard = instance.step(builder.getDynamicScope(),
-                            communicationTime, ctxt.currentStepSize, new ABoolLiteralExp(new LexLocation("",0,0),false));
-
-                    communicationPoint.setValue(new DoubleExpressionValue(discard.getValue().getLastSuccessfulTime().getExp()));
-
-                    PredicateFmi2Api didDiscard = new PredicateFmi2Api(discard.getKey().getExp()).not();
-
-                    dynamicScope.enterIf(didDiscard);
-                    {
-                        builder.getLogger()
-                                .debug("## FMU: '%s' DISCARDED step at sim-time: %f for step-size: %f and proposed sim-time: %.15f", instance.getName(),
-                                        communicationTime, ctxt.currentStepSize,
-                                        new VariableFmi2Api<>(null, discard.getValue().getLastSuccessfulTime().getType(), dynamicScope, dynamicScope, null,
-                                                discard.getValue().getLastSuccessfulTime().getExp()));
-                        anyDiscards.setValue(new BooleanVariableFmi2Api(null, null, dynamicScope, null, anyDiscards.toPredicate().or(didDiscard).getExp()));
-                        dynamicScope.leave();
-                    }
-
-//                    if (stepPredicate.isPresent()) {
-//                        dynamicScope.leave();
-//                    }
-                });
+                /**
+                 * FMI 3 step mode stepping
+                 * */
+                stepAllFmi3(builder, fmuInstance3ToCommunicationPoint, ctxt, fmuInstances3, eventUpdatingFlags, dynamicScope, anyDiscards);
 
                 // GET ALL LINKED OUTPUTS INCLUDING LOGGING OUTPUTS
-                for (var entry : componentsToPortsWithValues.entrySet()) {
-                    var portsToValues = entry.getValue();
-                    portsToValues = entry.getKey().get(portsToValues.keySet().toArray(PortFmi2Api[]::new));
-                }
-                for (var entry : instancesToPortsWithValues.entrySet()) {
-                    var portsToValues = entry.getValue();
-
-                    InstanceVariableFmi3Api instance = entry.getKey();
-
-                    for (PortFmi3Api p : portsToValues.keySet().stream().filter(isClockedVariable.negate()).toArray(PortFmi3Api[]::new)) {
-                        var val = instance.get(p);
-                        instance.share(val);
-                    }
-
-//                    portsToValues = entry.getKey().get(portsToValues.keySet().toArray(PortFmi3Api[]::new));
-                }
+                getStepOutputs(componentsToPortsWithValues, instancesToPortsWithValues);
 
                 // CONVERGENCE
                 if (jacobianStepConfig.stabilisation) {
@@ -445,7 +363,16 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
 
                     // Log values at current communication point
                     dataWriterInstance.log(ctxt.currentCommunicationTime);
-                    ctxt.currentStepSize.setValue(ctxt.stepSize);
+                    eventUpdatingFlags = updateEventsInEventMode(builder, eventCapableInstances, fmuInstances3, ctxt);
+
+
+                    ctxt.currentStepSize.setValue(calculateNextStepSize(builder, ctxt, timeBasedInputClockPorts));
+                    var checkStepSizeScope = builder.getDynamicScope().enterIf(ctxt.currentStepSize.toMath().lessEqualTo(IntExpressionValue.of(0)));
+                    var checkStepSizeScopeThen = checkStepSizeScope.enterThen();
+                    builder.getLogger().debug("Step size must be positive: %f", ctxt.currentStepSize);
+//                    checkStepSizeScopeThen.add(new AErrorStm(newAStringLiteralExp("Step size must be positive")));
+                    checkStepSizeScope.leave();
+                    builder.getLogger().debug("## Step size: %f", ctxt.currentStepSize);
                 }
 
                 scopeFmi2Api.leave();
@@ -464,6 +391,279 @@ public class JacobianStepBuilder3 extends JacobianStepBuilder {
         }
 
         return new EmptyRuntimeConfig<>();
+    }
+
+    private static DoubleVariableFmi2Api calculateNextStepSize(MablApiBuilder builder, JacobianInternalBuilder.Jacobian3Context ctxt,
+                                                               Map<InstanceVariableFmi3Api, Stream<PortFmi3Api>> timeBasedInputClockPorts) {
+        if (timeBasedInputClockPorts.isEmpty()) {
+
+            return ctxt.stepSize;
+        }
+
+
+        // preconfigure the step size to the shift only if we have clocks
+        int clockIndex = 1;
+        ctxt.stepSizes.items().getFirst().setValue(ctxt.stepSize);
+        builder.getLogger().debug("## StepSizes[0]: %s", ctxt.stepSizes.items().get(0));
+        for (var instance : ctxt.fmu3Instances.entrySet()) {
+            var clockTimePorts = instance.getValue().getPorts().stream().filter(isClockTimeBased).toList();
+            for (var clockPort : clockTimePorts) {
+                var stepSizeVar = ctxt.stepSizes.items().get(clockIndex++);
+
+                //ok so we need step size from now and we need to consider if it ever ticked
+                InstanceClocksFmi3 clocks = instance.getValue().getClocksUtil();
+
+                stepSizeVar.setValue(clocks.getTimeToTick(ctxt.currentCommunicationTime.toMath(), clockPort));
+                builder.getLogger().debug("## StepSizes["+(clockIndex-1)+"]: %s", stepSizeVar);
+            }
+        }
+        builder.getLogger().debug("## current time: %s", ctxt.currentCommunicationTime);
+        return builder.getMathBuilder().minRealFromArray(ctxt.stepSizes);
+
+
+    }
+
+    @NotNull
+    private static Map<String, BooleanVariableFmi2Api> updateEventsInEventMode(MablApiBuilder builder,
+                                                                               List<InstanceVariableFmi3Api> eventCapableInstances,
+                                                                               Map<String, InstanceVariableFmi3Api> fmuInstances3,
+                                                                               JacobianInternalBuilder.Jacobian3Context ctxt) {
+        eventCapableInstances.forEach(InstanceVariableFmi3Api::enterEventMode);
+        var eventUpdatingFlags = fmuInstances3.entrySet().stream().filter(map -> hasEventMode.test(map.getValue()))
+                .collect(Collectors.toMap(Map.Entry::getKey, map -> builder.getDynamicScope().store(map.getKey() + "ProcessEvents", true)));
+        builder.getLogger().debug("EVENT - Get and Share clocks");
+//            for (var instance : eventCapableInstances) {
+//                var clockPorts = instance.getPorts().stream().filter(isClock).toList();
+//                // initial get all output clocks
+//                clockPorts.stream().filter(isCausalityOutput.and(isClockTriggered)).forEach(instance::getAndShare);
+//            }
+
+
+        //TODO we also need all the clocked variables that are not continuous
+
+                /* now we need to handle the events. That is:
+                     - set clocks
+                     - set clock dependent none continuous scalar variables
+                     - FMI3UpdateDiscreteStates until no updates are needed
+                 */
+
+
+        processEvents(builder, eventCapableInstances, ctxt, eventUpdatingFlags, fmuInstances3);
+
+
+        //we need to make sure every instance is ready for step mode
+        eventCapableInstances.forEach(InstanceVariableFmi3Api::enterStepMode);
+        return eventUpdatingFlags;
+    }
+
+    private static void processEvents(MablApiBuilder builder, List<InstanceVariableFmi3Api> eventCapableInstances,
+                                      JacobianInternalBuilder.Jacobian3Context ctxt,
+                                      Map<String, BooleanVariableFmi2Api> eventUpdatingFlags, Map<String, InstanceVariableFmi3Api> fmuInstances3) {
+        var eventHandlingScope = builder.getDynamicScope().enterScope();
+
+        updateTriggeredClocks(eventCapableInstances);
+        updateTimeBasedClocks(builder, eventCapableInstances, ctxt);
+
+        updateEventStates(builder, eventUpdatingFlags, fmuInstances3, ctxt);
+
+
+        // Event update the initial event states not sure if we should set clocks before this
+        // set shared clocks
+        // set time based clocks that are not shifted yes
+        //FMI3UpdateDiscreteStates
+
+        eventHandlingScope.leave();
+    }
+
+    private static void updateTriggeredClocks(List<InstanceVariableFmi3Api> eventCapableInstances) {
+        //get all triggered output clocks and make them available
+        //noinspection unchecked
+        eventCapableInstances.forEach(
+                instance -> instance.getPorts().stream().filter(isClock).filter(isCausalityOutput.and(isClockTriggered)).forEach(instance::getAndShare));
+        //set all triggered input clocks
+        eventCapableInstances.forEach(
+                instance -> instance.getPorts().stream().filter(isClock).filter(isCausalityInput.and(isClockTriggered)).forEach(instance::setLinked));
+        //if a clock is triggered then we need to obtain all variables related to it and share them
+        //TODO if a clock is triggered then we need to obtain all variables related to it and share them
+
+    }
+
+    private static void stepAllFmi2(MablApiBuilder builder, Map<ComponentVariableFmi2Api, VariableFmi2Api<Double>> fmuInstanceToCommunicationPoint,
+                                    JacobianInternalBuilder.Jacobian3Context ctxt, ModelSwapBuilder.ModelSwapContext modelSwapContext,
+                                    Fmi2SimulationEnvironment env, DynamicActiveBuilderScope dynamicScope, BooleanVariableFmi2Api anyDiscards) {
+        fmuInstanceToCommunicationPoint.forEach((instance, communicationPoint) -> {
+
+            DoubleVariableFmi2Api communicationTime = ctxt.currentCommunicationTime;
+
+            Map.Entry<DoubleVariableFmi2Api, Optional<PredicateFmi2Api>> swapStep = ModelSwapBuilder.updateStep(modelSwapContext, env, instance,
+                    communicationTime);
+
+            Optional<PredicateFmi2Api> stepPredicate = swapStep.getValue();
+            communicationTime = swapStep.getKey();
+
+            stepPredicate.ifPresent(dynamicScope::enterIf);
+
+            Map.Entry<FmiBuilder.BoolVariable<PStm>, FmiBuilder.DoubleVariable<PStm>> discard = instance.step(communicationTime,
+                    ctxt.currentStepSize);
+
+            communicationPoint.setValue(new DoubleExpressionValue(discard.getValue().getExp()));
+
+            PredicateFmi2Api didDiscard = new PredicateFmi2Api(discard.getKey().getExp()).not();
+
+            dynamicScope.enterIf(didDiscard);
+            {
+                builder.getLogger()
+                        .debug("## FMU: '%s' DISCARDED step at sim-time: %f for step-size: %f and proposed sim-time: %.15f", instance.getName(),
+                                communicationTime, ctxt.currentStepSize,
+                                new VariableFmi2Api<>(null, discard.getValue().getType(), dynamicScope, dynamicScope, null,
+                                        discard.getValue().getExp()));
+                anyDiscards.setValue(new BooleanVariableFmi2Api(null, null, dynamicScope, null, anyDiscards.toPredicate().or(didDiscard).getExp()));
+                dynamicScope.leave();
+            }
+
+            if (stepPredicate.isPresent()) {
+                dynamicScope.leave();
+            }
+        });
+    }
+
+    private static void stepAllFmi3(MablApiBuilder builder, Map<InstanceVariableFmi3Api, VariableFmi2Api<Double>> fmuInstance3ToCommunicationPoint,
+                                    JacobianInternalBuilder.Jacobian3Context ctxt, Map<String, InstanceVariableFmi3Api> fmuInstances3,
+                                    Map<String, BooleanVariableFmi2Api> eventUpdatingFlags, DynamicActiveBuilderScope dynamicScope,
+                                    BooleanVariableFmi2Api anyDiscards) {
+        fmuInstance3ToCommunicationPoint.forEach((instance, communicationPoint) -> {
+
+            DoubleVariableFmi2Api communicationTime = ctxt.currentCommunicationTime;
+
+//                    Map.Entry<DoubleVariableFmi2Api, Optional<PredicateFmi2Api>> swapStep = ModelSwapBuilder.updateStep(modelSwapContext, env, instance,
+//                            communicationTime);
+
+//                    Optional<PredicateFmi2Api> stepPredicate = swapStep.getValue();
+//                    communicationTime = swapStep.getKey();
+
+//                    stepPredicate.ifPresent(dynamicScope::enterIf);
+
+            var requireEventProcessing = fmuInstances3.entrySet().stream().filter(map -> map.getValue().equals(instance)).map(Map.Entry::getKey).map(
+                    eventUpdatingFlags::get).findFirst().orElse(null);
+            ABoolLiteralExp noSetFMUStatePriorToCurrentPoint = new ABoolLiteralExp(new LexLocation("", 0, 0), false);
+            var stepResult = instance.step(builder.getDynamicScope(),
+                    communicationTime, ctxt.currentStepSize,
+                    noSetFMUStatePriorToCurrentPoint, new InstanceVariableFmi3Api.StepResult(requireEventProcessing, null, null, null));
+
+            var stepReturnData = stepResult.getValue();
+
+            communicationPoint.setValue(new DoubleExpressionValue(stepReturnData.getLastSuccessfulTime().getExp()));
+
+            PredicateFmi2Api didDiscard = new PredicateFmi2Api(stepResult.getKey().getExp()).not();
+
+            dynamicScope.enterIf(didDiscard);
+            {
+                builder.getLogger()
+                        .debug("## FMU: '%s' DISCARDED step at sim-time: %f for step-size: %f and proposed sim-time: %.15f", instance.getName(),
+                                communicationTime, ctxt.currentStepSize,
+                                new VariableFmi2Api<>(null, stepReturnData.getLastSuccessfulTime().getType(), dynamicScope, dynamicScope, null,
+                                        stepReturnData.getLastSuccessfulTime().getExp()));
+                anyDiscards.setValue(new BooleanVariableFmi2Api(null, null, dynamicScope, null, anyDiscards.toPredicate().or(didDiscard).getExp()));
+                dynamicScope.leave();
+            }
+
+//                    if (stepPredicate.isPresent()) {
+//                        dynamicScope.leave();
+//                    }
+        });
+    }
+
+    private static void getStepOutputs(Map<ComponentVariableFmi2Api, Map<PortFmi2Api, VariableFmi2Api<Object>>> componentsToPortsWithValues,
+                                       Map<InstanceVariableFmi3Api, Map<PortFmi3Api, VariableFmi2Api<Object>>> instancesToPortsWithValues) {
+        for (var entry : componentsToPortsWithValues.entrySet()) {
+            var portsToValues = entry.getValue();
+            portsToValues = entry.getKey().get(portsToValues.keySet().toArray(PortFmi2Api[]::new));
+        }
+        for (var entry : instancesToPortsWithValues.entrySet()) {
+            var portsToValues = entry.getValue();
+
+            InstanceVariableFmi3Api instance = entry.getKey();
+
+            for (PortFmi3Api p : portsToValues.keySet().stream().filter(isClockedVariable.negate()).toArray(PortFmi3Api[]::new)) {
+                var val = instance.get(p);
+                instance.share(val);
+            }
+
+//                    portsToValues = entry.getKey().get(portsToValues.keySet().toArray(PortFmi3Api[]::new));
+        }
+    }
+
+    private static void updateEventStates(MablApiBuilder builder, Map<String, BooleanVariableFmi2Api> eventUpdatingFlags,
+                                          Map<String, InstanceVariableFmi3Api> fmuInstances3, JacobianInternalBuilder.Jacobian3Context ctxt) {
+        var dontCareBool = builder.getDynamicScope().store("dont_care_bool", false);
+        var dontCareReal = builder.getDynamicScope().store("dont_care_real", 0.0);
+
+        // keep looping while any of needs an update
+        builder.getDynamicScope()
+                .enterWhile(eventUpdatingFlags.values().stream().map(BooleanVariableFmi2Api::toPredicate).reduce(PredicateFmi2Api::or).orElse(null));
+
+        for (var entry : eventUpdatingFlags.entrySet()) {
+            var k = entry.getKey();
+            var processEvents = entry.getValue();
+            var instance = fmuInstances3.get(k);
+            var processEventsScope = builder.getDynamicScope().enterIf(processEvents.toPredicate());
+
+            instance.updateDiscreteStates(builder.getDynamicScope(), processEvents, ctxt.terminateSimulation, dontCareBool, dontCareBool, dontCareBool,
+                    dontCareReal);
+
+            var ifNeedsProcessing = builder.getDynamicScope().enterIf(processEvents.toPredicate());
+            builder.getLogger().info("## FMU: " + instance.getName() + " EVENTS UPDATED");
+            ifNeedsProcessing.leave();
+            //TODO check for terminate simulation
+
+            processEventsScope.leave();
+        }
+    }
+
+    private static void updateTimeBasedClocks(MablApiBuilder builder, List<InstanceVariableFmi3Api> eventCapableInstances,
+                                              JacobianInternalBuilder.Jacobian3Context ctxt) {
+        for (var instance : eventCapableInstances) {
+            var clockPorts = instance.getPorts().stream().filter(isClock).toList();
+
+
+            //we do this in two stages triggered and times
+//                instance.setLinked(clockPorts.stream().filter(isCausalityInput.and(isClockTriggered)).map(PortFmi3Api::getName).toArray(String[]::new));
+
+
+            var timeBasedClockPorts = clockPorts.stream().filter(isCausalityInput.and(isClockTimeBased)).toList();
+            if (timeBasedClockPorts.isEmpty()) {
+                continue;
+            }
+            builder.getLogger().debug("Processing clock (time-based clocks) for " + instance.getName());
+            timeBasedClockPorts.forEach(clockPort -> {
+
+                var ifScope = builder.getDynamicScope()
+                        .enterIf(instance.getClocksUtil().check(builder.getDynamicScope(), ctxt.currentCommunicationTime.toMath(), clockPort));
+                builder.getLogger().debug("\tTimed clock of %s.%s TRIGGERED".formatted(instance.getName(), clockPort.getName()));
+                instance.set(clockPort, BooleanExpressionValue.of(true));
+                builder.getDynamicScope().add(new ADebugStm(Collections.singletonList(new AStringLiteralExp(null,"context"))));
+                ifScope.leave();
+
+            });
+
+        }
+    }
+
+    private static boolean isEveryFMUSupportsGetState
+            (Map<String, ComponentVariableFmi2Api> fmuInstances, Map<String, InstanceVariableFmi3Api> fmuInstances3) {
+        return fmuInstances.values().stream().allMatch(inst -> {
+            try {
+                return inst.getModelDescription().getCanGetAndSetFmustate();
+            } catch (XPathExpressionException e) {
+                throw new RuntimeException(e);
+            }
+        }) && fmuInstances3.values().stream().allMatch(inst -> {
+            try {
+                return inst.getModelDescription().getCanGetAndSetFmustate();
+            } catch (XPathExpressionException e) {
+                throw new RuntimeException(e);
+            }
+        });
     }
 
 
